# Pi_codes

./: .gitignore  AGENTS.md  EXPERIMENT_COMMANDS.md  README.md  SPEC.MD  export_tm_to_npz.jl  glade_v2.py  inference_all_datasets.jl  inference_benchmark_unsw.jl  inference_benchmark_wustl.jl  ml_numpy_infer.py  pyproject.toml  run_all.sh
ansible/: README.md  ansible.cfg  inventory.rpi.example.ini  rpi.env.example
ansible/group_vars/: rpi.yml
ansible/playbooks/: rpi_fuzzy_tm_infer.yml
archives/results_legacy_2026-04-28/: PAPER_OUTLINE_IEEE.md  README.md  booleanizer_speed_2026-04-28.md  predict_time_table.txt  tm_inference_all_datasets.txt  tm_local_infer_python_vs_c_2026-04-27.md
archives/src_legacy_2026-04-28/: deploy_inference.jl  fbz_sparse.py  inference_benchmark.jl  inference_benchmark_toniot.jl  run_ml_corr.sh  tm_fbz_infer.c
results/: GLADE_FPTM_TII_final.tex  INDEX.md  INFERENCE_COMPARISON.md  METHOD_COMPARISON.md  README.md  SLIDES_TABLES.md  SPEC.md  python_tm_pi_realistic.txt
results/2026-04-27_native_python_c_history/: README.md  manifest.toml
results/2026-04-27_native_python_c_history/latex/: 01_results.tex  02_c_profile_detail.tex  03_iteration_1_results.tex  04_iteration_1_c_profile_detail.tex  05_iteration_1_c_delta_vs_baseline.tex  06_iteration_1_scalar_fallback.tex  25_cleanup_pass.tex  (+78 more)
results/2026-04-28_booleanizer_speed/: README.md  manifest.toml
results/2026-04-28_compiled_tm_all_datasets/: README.md  manifest.toml
results/2026-04-28_fast_glade_v2_local/: README.md  manifest.toml
results/2026-04-28_glade_fptm_tii_draft/: README.md  manifest.toml
results/2026-04-28_gladev2_booleanizer_comparison/: README.md  manifest.toml
results/2026-04-28_ieee_journal_draft/: README.md  manifest.toml
results/2026-04-28_inference_comparison_note/: README.md  manifest.toml
results/2026-04-28_learning_julia_note/: README.md  manifest.toml
results/2026-04-28_method_comparison_note/: README.md  manifest.toml
results/2026-04-28_model_family_comparison/: README.md  manifest.toml
results/2026-04-28_paper_outline_note/: README.md  manifest.toml
results/2026-04-28_python_tm_inference/: README.md  manifest.toml
results/2026-04-28_python_tm_streaming/: README.md  manifest.toml
results/2026-04-28_rpi_fast_glade_neon/: README.md  manifest.toml
results/2026-04-28_slide_tables_note/: README.md  manifest.toml
results/formats/: README.md  analysis_note_v1.md  benchmark_table_v1.md
results/templates/: README.md  manifest.toml
src/: Tsetlin.jl  export_ml_to_npz.py  fcm_bitmask_zstd.py  tm_dt_bench.py  tm_fbz_bench.jl  tm_infer.py  train_all_datasets.jl
src/fuzzy_tm_infer/: Makefile  README.md  __init__.py  _logging.py  assets.py  benchmark.py  config.py  data.py  requirements.txt  tm_infer.py
(+189 files in other folders)
