[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzy-tm-infer"
version = "0.1.0"
description = "Local Fuzzy TM inference and benchmark utilities."
readme = "src/fuzzy_tm_infer/README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [{ name = "Fuzzy TM contributors" }]
keywords = ["fuzzy-tm", "tsetlin-machine", "inference", "benchmark"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "loguru>=0.7",
  "numba>=0.59",
  "numpy>=1.24",
  "zstandard>=0.22",
]

[project.optional-dependencies]
dt = [
  "scikit-learn>=1.3",
]
compression = [
  "pillow>=10",
  "zstandard>=0.22",
]
dev = [
  "ansible>=9",
  "scikit-learn>=1.3",
  "ruff>=0.4",
]
rpi = [
  "ansible>=9",
]
all = [
  "ansible>=9",
  "scikit-learn>=1.3",
  "pillow>=10",
  "ruff>=0.4",
]

[project.scripts]
fuzzy-tm-infer = "fuzzy_tm_infer.tm_infer:main"
fuzzy-tm-health = "fuzzy_tm_infer.scripts.health:main"
fuzzy-tm-result = "fuzzy_tm_infer.scripts.scaffold_result:main"
fuzzy-tm-result-render = "fuzzy_tm_infer.scripts.result_render:main"
fuzzy-tm-result-validate = "fuzzy_tm_infer.scripts.result_validate:main"
fuzzy-tm-verify-fast-glade = "fuzzy_tm_infer.scripts.verify_fast_glade:main"
tm-rpi-deploy = "fuzzy_tm_infer.scripts.rpi_ansible:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fuzzy_tm_infer*"]

[tool.setuptools.package-data]
fuzzy_tm_infer = [
  "py.typed",
  "algorithms/c/README.md",
  "algorithms/c/AGENTS.md",
  "algorithms/c/booleanizers/glade_v2/*.c",
  "algorithms/c/booleanizers/glade_v2/*.h",
  "algorithms/c/booleanizers/glade_v2/Makefile",
  "algorithms/c/booleanizers/glade_v2/README.md",
  "algorithms/c/common/*.c",
  "algorithms/c/common/*.h",
  "algorithms/c/fuzzy_tm/*.md",
  "algorithms/c/fuzzy_tm/*/*.c",
  "algorithms/c/fuzzy_tm/*/*.h",
  "algorithms/c/fuzzy_tm/*/Makefile",
  "algorithms/c/fuzzy_tm/*/README.md",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fuzzy_tm_infer"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src/fuzzy_tm_infer"]
exclude = [
  "**/__pycache__",
  "src/fuzzy_tm_infer/assets",
  "src/fuzzy_tm_infer/algorithms/c",
]

[tool.uv]
package = true
